# POP-classification

./: README.md
RPO/: CMakeLists.txt  main.cpp
RPO/CP_engine/: CMakeLists.txt  cp_engine.cpp  cp_engine.hh
RPO/CP_rule_learning/: CMakeLists.txt  cp_rule_learner.cpp  cp_rule_learner.hh
RPO/SWIG/: CMakeLists.txt  python_functions.cpp  python_functions.hh  relationship_map.hh  rpo.i  test.ipynb
RPO/SWIG/rpo/: rpo.py  rpoPYTHON_wrap.cxx
RPO/database/: CMakeLists.txt  database.cpp  database.hh  vertical_database.cpp  vertical_database.hh
RPO/option_handler/: CMakeLists.txt  cp_engine_options.cpp  cp_engine_options.hh  cp_rule_learner_options.cpp  cp_rule_learner_options.hh  options.cpp  options.hh
RPO/pattern/: CMakeLists.txt  episode.cpp  episode.hh  item.cpp  item.hh  multiset.cpp  multiset.hh  occurrence_map.cpp  occurrence_map.hh  relevant_constraint.cpp  relevant_constraint.hh  tid_map.cpp  tid_map.hh
notebooks/: classification_results.ipynb
results/: classification_1.csv
scripts/: classification.py  qualitative.py  run_classification_XP.sh
