Project(${CP_engine_API_LIB})

CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
find_package(Gecode COMPONENTS REQUIRED int search minimodel)

FILE(GLOB CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
MESSAGE(STATUS ">> Files: ${CPPFILES}")

set(HEADERS
        ${HEADERS}
        ${CMAKE_CURRENT_SOURCE_DIR}
        PARENT_SCOPE)
include_directories(${HEADERS})

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${CPPFILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${GECODE_LIBRARIES} ${Pattern_API_LIB} ${CP_rule_learning_API_LIB} )


IF(OUTPUT_DIR_FOUND)
    SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
ENDIF(OUTPUT_DIR_FOUND)

set( CMAKE_VERBOSE_MAKEFILE off )