Project(${Pattern_API_LIB})

CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

FILE(GLOB CPPFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
MESSAGE(STATUS ">> Files: ${CPPFILES}")

set(HEADERS
        ${HEADERS}
        ${CMAKE_CURRENT_SOURCE_DIR}
        PARENT_SCOPE)
include_directories(${HEADERS})

ADD_LIBRARY( ${PROJECT_NAME} STATIC ${CPPFILES})
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${Database_API_LIB} )

IF(OUTPUT_DIR_FOUND)
    SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})
ENDIF(OUTPUT_DIR_FOUND)

set( CMAKE_VERBOSE_MAKEFILE off )